Bug 121957 - "copy text" feature is gone
Summary: "copy text" feature is gone
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: 1.2.1
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 131846 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-02-14 14:33 UTC by Oliver Grimm
Modified: 2006-08-04 09:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Grimm 2006-02-14 14:33:12 UTC
Version:           1.2.1 (using KDE KDE 3.5.1)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Bug 94906 is back. Filing a new one since I cannot reopen (I am not the original reporter).

After upgrading to KDE 3.5.1 the "copy text" feature in Akregator is no longer available.

To reproduce do

- start Akregator
- load a web page
- select some text with the mouse
- right click the selected text
--> the "copy" option is not available anymore
Comment 1 Oliver Grimm 2006-06-25 13:44:17 UTC
still a problem with Akregator 1.2.2 / KDE 3.5.3
Comment 2 Frank Osterfeld 2006-06-25 20:48:04 UTC
SVN commit 554926 by osterfeld:

fix browser tab context menus, including copy action when text is selected.
These flags seriously need a cleanup so one can figure out what to do
without reading khtmlpart code...

BUG: 121957


 M  +9 -0      ChangeLog  
 M  +21 -9     src/pageviewer.cpp  
 M  +1 -1      src/viewer.cpp  


--- branches/KDE/3.5/kdepim/akregator/ChangeLog #554925:554926
@@ -2,6 +2,15 @@
 ===================
 (c) 2004-2006 the Akregator authors.
 
+Changes after 1.2.3:
+-----------------------------
+
+Bug fixes:
+ 
+ 2006/06/25 Fix context menus in browser tab, show appriopriate entries when
+            text is selected (copy action) or the cursor is over a link 
+            (#121957) -fo
+ 
 Changes after 1.2.2:
 -----------------------------
 
--- branches/KDE/3.5/kdepim/akregator/src/pageviewer.cpp #554925:554926
@@ -411,9 +411,12 @@
 {
     m_url = kurl;
     QString url = kurl.url(); // maximal url confusion
-
-    const bool isLink = (kpf & KParts::BrowserExtension::ShowNavigationItems) == 0;
-
+    
+    const bool showReload = KParts::BrowserExtension::ShowReload;
+    const bool showNavigationItems = KParts::BrowserExtension::ShowNavigationItems;
+    const bool isLink = (kpf & (KParts::BrowserExtension::ShowNavigationItems | KParts::BrowserExtension::ShowTextSelectionItems)) == 0;
+    const bool isSelection = (kpf & KParts::BrowserExtension::ShowTextSelectionItems) != 0;
+        
     KPopupMenu popup(this->widget());
 
     int idNewWindow = -2;
@@ -434,15 +437,24 @@
     }
     else // we are not on a link
     {
+        if (showNavigationItems)
+        {
+            d->backAction->plug( &popup );
+            d->forwardAction->plug( &popup );
+        }
 
-        d->backAction->plug( &popup );
-        d->forwardAction->plug( &popup );
-        d->reloadAction->plug(&popup);
+        if (showReload)
+            d->reloadAction->plug(&popup);
+        
         d->stopAction->plug(&popup);
-
+        
         popup.insertSeparator();
-        action("viewer_copy")->plug(&popup);
-        popup.insertSeparator();
+        
+        if (isSelection)
+        {
+            action("viewer_copy")->plug(&popup);
+            popup.insertSeparator();
+        }
 
         KAction* incFontAction = this->action("incFontSizes");
         KAction* decFontAction = this->action("decFontSizes");
--- branches/KDE/3.5/kdepim/akregator/src/viewer.cpp #554925:554926
@@ -170,7 +170,7 @@
 
 void Viewer::slotPopupMenu(KXMLGUIClient*, const QPoint& p, const KURL& kurl, const KParts::URLArgs&, KParts::BrowserExtension::PopupFlags kpf, mode_t)
 {
-   const bool isLink = (kpf & KParts::BrowserExtension::ShowNavigationItems) == 0;
+   const bool isLink = (kpf & (KParts::BrowserExtension::ShowNavigationItems | KParts::BrowserExtension::ShowTextSelectionItems)) == 0;
    const bool isSelection = (kpf & KParts::BrowserExtension::ShowTextSelectionItems) != 0;
     
    QString url = kurl.url();
Comment 3 Frank Osterfeld 2006-08-04 09:53:25 UTC
*** Bug 131846 has been marked as a duplicate of this bug. ***