fix browser tab context menus, including copy action when text is selected. These flags seriously need a cleanup so one can figure out what to do without reading khtmlpart code...

BUG: 121957

svn path=/branches/KDE/3.5/kdepim/; revision=554926